--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "react-modal": "^3.16.1",
     "typescript": "4.9.4"
   },
+    "prisma": {
+      "seed": "ts-node -P tsconfig-seed.json -r tsconfig-paths/register --transpileOnly prisma/seed.ts"
+    },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
