setup authentication and jwt

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_URL='postgresql://postgres:yxZzfCN0gjmqdpOPYdtY@containers-us-west-196.railway.app:7439/railway?schema=public'
+
+JWT_SECRET=test_secret_word
