--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL='postgresql://postgres:yxZzfCN0gjmqdpOPYdtY@containers-us-west-196.railway.app:7439/railway?schema=public'
 
 JWT_SECRET=test_secret_word
+COOKIE_NAME=_project_app
